test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_write_stmt.draco
proc main() void :  write(a); corp;
