test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_write_no_arguments.draco
proc main() void :  write(); corp;
